--- a/index.html
+++ b/index.html
@@ -8,67 +8,63 @@
 </head>
 <body>
     <header>
-    <img src="images/menu.svg" alt="menu" class="menu">
-    <div class="headerContents">
-        <a href="#aboutUS">About us</a>
-        <a href="#meditation">Meditation</a>
-        <a href="#Listening">Playlist</a>
-        <a href="#Diary">Diary</a>
-        <a href="#Breath">Breath Techniques</a>
-    </div>
-    <img src="images/profile.svg" alt="account" class="account">
+        <div class="siteName">
+            <h3 class="siteName">FeelSafe</h3>
+        </div>
+        <div class="menu">
+            <a class="agroup" href="#meditation">Meditation</a>
+            <a class="agroup" href="#breath">Breath Technique</a>
+            <a class="agroup" href="#music">Calm Music</a>
+            <button class="exploreSite">
+                <img src="./images/downarrow.png" alt="explore" >
+            </button>
+            <a href="#about" class="learn">Learn More</a>
+            <a href="#sign" class="sign">Sign Up</a>
+        </div>
     </header>
+    <hr>
     <main>
         <div class="first">
-            <div class="mainTexts">
-                
-                <h1> A Safe Space to Help
-                    You Deal with Anxiety</h1>
-                    <p class="purpose">
-                        At FeelSafe, our purpose is clear: to be a guiding light during moments of anxiety and panic. We understand that navigating these feelings can be overwhelming, and we are here to provide the support and resources you need to find calmness and strength.
-                    </p>
-                    <button class="signUp">SIGN UP</button>
-                </div>
-                <!-- <div class="imgContainer">
-                    <img src="./images/support1.jpg" alt="background" class="background1">
-                </div> -->
-        </div>
-        <div id="aboutUs">
-            <h2 class="aboutH2">About Us</h2>
-            <div class="aboutContainer">
-                <div class="about1">
-                    <h3>Who we are :</h3>
-                    <p class="about1p">At FeelSafe, we are a team of passionate individuals who understand the impact of anxiety on daily life. Whether you're seeking coping strategies, educational insights, or simply a supportive community, we're here for you. Our collective experience, coupled with a commitment to mental health advocacy, drives us to create a platform that fosters healing and resilience.</p>
-                </div>
-                <div class="about2">
-                    <h3>What we believe:</h3>
-                    <p class="about2p">We believe in the power of community, empathy, and knowledge. Our goal is to empower you with tools to manage anxiety, promote self-care, and build a foundation for lasting mental wellness. By combining evidence-based information with personal stories, we aim to break down the stigma surrounding mental health and create an inclusive space for everyone.</p>
-                </div>
+            <div class="texts">
+                <h1>Find Calmness and Peace at FeelSafe</h1>
+                <p>Welcome to FeelSafe, a calming space designed to help individuals with anxiety find solace. Explore our features including meditation, breath techniques, soothing musitc and etc to restore tranquility to your life.</p>
+                <a href="#about" class="discover"> Discover</a>
             </div>
+             <img src="./images/firstback.jpg" alt="justpic">
         </div>
-        <div id="meditation">
-            <div class="medImgCont">
-                <img src="./images/meditationBack.svg" alt="background" class="medBack">
-            </div>
-            <div class="medTexts">
-                <h3>Finding a Balance and Peace with
-                    Meditation</h3>
-                    <div class="medTextAndImg">
-                        <div class="pAndA">
-                            <p>At FeelSafe, we understand that meditation is a powerful tool for managing anxiety and enhancing overall well-being. Our guided meditations are crafted by experienced practitioners and wellness experts, providing you with a supportive environment to cultivate mindfulness.</p>
-                             <a href="#" class="explore">Explore</a>   
+        <div id="second">
+            <div class="secondTexts">
+
+                <h2>Finding a Balance and Peace with Meditation</h2>
+                <p class="secondP">Experiencea a variety of guided meditations designed to help you find calm and peace in your daily life. Whether you're new to meditation or an experienced practitioner, our collection of meditations offers something for everyone</p>
+                <div class="secondSmallCont">
+                        <div class="small1">
+                            <h3>Guided Meditations</h3>
+                            <p>Immerse yourself in a world of tranquility with our diverse range of guided meditations.</p>
                         </div>
-                    <img src="./images/meditation.svg" alt="meditation" >
-                    </div>
+                        <div class="small2">
+                            <h3>Daily Reflections</h3>
+                            <p>Take a moment each day to reflect and find inner peace with our daily reflections.</p>
+                        </div>
+                </div>
+                <div class="secondButt">
+                    <button class="meditationStart">Start</button>
+                </div>  
             </div>
-
+            <img src="./images/meditation.jpg" alt="meditation">
         </div>
-        <div id="breath">
-            <h3>Breath Techniques</h3>
-            <p>
-                Welcome to the Breath Techniques section at [Your Website Name]. Harness the power of conscious breathing to cultivate calmness, reduce anxiety, and enhance your overall well-being. Explore the following breath techniques designed to bring balance to your mind and body.Begin your exploration of breath techniques and experience the transformative power of conscious breathing. Join us at [Your Website Name] and make breathwork an integral part of your daily well-being routine.            </p>
-            <a href="#" class="explore">Explore</a>   
-
+        <div id="third">
+            <img src="./images/breath.jpg" alt="breathing">
+            <div class="third1">
+                <h2 class="thirdH2">Breathing Exercises: Instant Relief for Anxiety Attacks</h2>
+                <p class="thirdP">
+                    Our breathing exercises feature provides simple techniques to help manage anxiety in the moment. By focusing on your breath, you can calm your mind and body, reducing the intensity of anxiety attacks.
+                </p>
+                <button class="breathStart"> Start</button>
+            </div>
+        </div>
+        <div class="forth">
+            
         </div>
     </main>
     <script src="app.js"></script>
